[package]
name = "scraper"
version = "0.1.0"
authors = ["Oliver Lee <oliverzlee@gmail.com>", "Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"

[dependencies]
proc-macro2 = "0.4.30"
quote = "0.6.12"
regex = "1.1.6"
reqwest = "0.9.17"
select = "0.4.2"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
